{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 51,
  "lineage": "5321f372-9272-2af5-1204-a0932e6d0de4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_to_public_ec2s",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Permite trafego do ALB",
            "from_port": 80,
            "id": "sgrule-3052669405",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-06e21bf399f66d903",
            "security_group_rule_id": "sgr-0acca6081bd576290",
            "self": false,
            "source_security_group_id": "sg-076a3fa3de81995e6",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.alb_sg",
            "module.net.aws_security_group.sg",
            "module.net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "app_to_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Permite Apps acessarem Banco",
            "from_port": 3306,
            "id": "sgrule-360102706",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b6bc9d832e1bef9e",
            "security_group_rule_id": "sgr-006f45b5f97862e00",
            "self": false,
            "source_security_group_id": "sg-06e21bf399f66d903",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.net.aws_security_group.mysql_sg",
            "module.net.aws_security_group.sg",
            "module.net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bastion_to_db_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Permite SSH do Bastion",
            "from_port": 22,
            "id": "sgrule-3032473989",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b6bc9d832e1bef9e",
            "security_group_rule_id": "sgr-0b44f44edd1b22558",
            "self": false,
            "source_security_group_id": "sg-06e21bf399f66d903",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.net.aws_security_group.mysql_sg",
            "module.net.aws_security_group.sg",
            "module.net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:058264073116:loadbalancer/app/optimiza-alb/903690127cb62895",
            "arn_suffix": "app/optimiza-alb/903690127cb62895",
            "desync_mitigation_mode": "defensive",
            "dns_name": "optimiza-alb-1222071325.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:058264073116:loadbalancer/app/optimiza-alb/903690127cb62895",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "optimiza-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-076a3fa3de81995e6"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-046d8141914185c4f"
              },
              {
                "subnet_id": "subnet-0f3f4871114f15e03"
              }
            ],
            "subnets": [
              "subnet-046d8141914185c4f",
              "subnet-0f3f4871114f15e03"
            ],
            "tags": {
              "Name": "optimiza-alb"
            },
            "tags_all": {
              "Name": "optimiza-alb"
            },
            "vpc_id": "vpc-007b6e528b6e82d6c",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.alb.aws_security_group.alb_sg",
            "module.net.aws_subnet.public_subnet",
            "module.net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "app_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:058264073116:listener/app/optimiza-alb/903690127cb62895/07ad8138b70703af",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:058264073116:targetgroup/optimiza-frontend-tg/e11b415e661e46f6",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:058264073116:listener/app/optimiza-alb/903690127cb62895/07ad8138b70703af",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:058264073116:loadbalancer/app/optimiza-alb/903690127cb62895",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.app_lb",
            "module.alb.aws_lb_target_group.frontend_tg",
            "module.alb.aws_security_group.alb_sg",
            "module.net.aws_subnet.public_subnet",
            "module.net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "django_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:058264073116:targetgroup/optimiza-django-tg/4dda6284ab588a3d",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:058264073116:listener-rule/app/optimiza-alb/903690127cb62895/07ad8138b70703af/5f3ed172668bb090",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/chamado/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:058264073116:listener-rule/app/optimiza-alb/903690127cb62895/07ad8138b70703af/5f3ed172668bb090",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:058264073116:listener/app/optimiza-alb/903690127cb62895/07ad8138b70703af",
            "priority": 10,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.app_lb",
            "module.alb.aws_lb_listener.app_listener",
            "module.alb.aws_lb_target_group.django_tg",
            "module.alb.aws_lb_target_group.frontend_tg",
            "module.alb.aws_security_group.alb_sg",
            "module.net.aws_subnet.public_subnet",
            "module.net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "spring_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:058264073116:targetgroup/optimiza-spring-tg/33f533b110657e18",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:058264073116:listener-rule/app/optimiza-alb/903690127cb62895/07ad8138b70703af/89c6d056de939eb0",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/optimiza/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:058264073116:listener-rule/app/optimiza-alb/903690127cb62895/07ad8138b70703af/89c6d056de939eb0",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:058264073116:listener/app/optimiza-alb/903690127cb62895/07ad8138b70703af",
            "priority": 20,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.app_lb",
            "module.alb.aws_lb_listener.app_listener",
            "module.alb.aws_lb_target_group.frontend_tg",
            "module.alb.aws_lb_target_group.spring_tg",
            "module.alb.aws_security_group.alb_sg",
            "module.net.aws_subnet.public_subnet",
            "module.net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "django_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:058264073116:targetgroup/optimiza-django-tg/4dda6284ab588a3d",
            "arn_suffix": "targetgroup/optimiza-django-tg/4dda6284ab588a3d",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/chamado/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:058264073116:targetgroup/optimiza-django-tg/4dda6284ab588a3d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "optimiza-django-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-007b6e528b6e82d6c"
          },
          "dependencies": [
            "module.net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontend_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:058264073116:targetgroup/optimiza-frontend-tg/e11b415e661e46f6",
            "arn_suffix": "targetgroup/optimiza-frontend-tg/e11b415e661e46f6",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:058264073116:targetgroup/optimiza-frontend-tg/e11b415e661e46f6",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "optimiza-frontend-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-007b6e528b6e82d6c"
          },
          "dependencies": [
            "module.net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "spring_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:058264073116:targetgroup/optimiza-spring-tg/33f533b110657e18",
            "arn_suffix": "targetgroup/optimiza-spring-tg/33f533b110657e18",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200,404",
                "path": "/optimiza/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:058264073116:targetgroup/optimiza-spring-tg/33f533b110657e18",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "optimiza-spring-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-007b6e528b6e82d6c"
          },
          "dependencies": [
            "module.net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "django_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:058264073116:targetgroup/optimiza-django-tg/4dda6284ab588a3d-2025120401571035870000000a",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:058264073116:targetgroup/optimiza-django-tg/4dda6284ab588a3d",
            "target_id": "i-023df04316016e8de"
          },
          "dependencies": [
            "module.alb.aws_lb_target_group.django_tg",
            "module.ec2.aws_instance.ec2-publica-1",
            "module.ec2.aws_instance.ec2-publica-2",
            "module.ec2.aws_key_pair.generated_key",
            "module.net.aws_security_group.sg",
            "module.net.aws_subnet.public_subnet",
            "module.net.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:058264073116:targetgroup/optimiza-django-tg/4dda6284ab588a3d-20251204015709924600000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:058264073116:targetgroup/optimiza-django-tg/4dda6284ab588a3d",
            "target_id": "i-0573973cc4fb668aa"
          },
          "dependencies": [
            "module.alb.aws_lb_target_group.django_tg",
            "module.ec2.aws_instance.ec2-publica-1",
            "module.ec2.aws_instance.ec2-publica-2",
            "module.ec2.aws_key_pair.generated_key",
            "module.net.aws_security_group.sg",
            "module.net.aws_subnet.public_subnet",
            "module.net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "frontend_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:058264073116:targetgroup/optimiza-frontend-tg/e11b415e661e46f6-20251204015709935400000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:058264073116:targetgroup/optimiza-frontend-tg/e11b415e661e46f6",
            "target_id": "i-023df04316016e8de"
          },
          "dependencies": [
            "module.alb.aws_lb_target_group.frontend_tg",
            "module.ec2.aws_instance.ec2-publica-1",
            "module.ec2.aws_instance.ec2-publica-2",
            "module.ec2.aws_key_pair.generated_key",
            "module.net.aws_security_group.sg",
            "module.net.aws_subnet.public_subnet",
            "module.net.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:058264073116:targetgroup/optimiza-frontend-tg/e11b415e661e46f6-20251204015710238100000009",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:058264073116:targetgroup/optimiza-frontend-tg/e11b415e661e46f6",
            "target_id": "i-0573973cc4fb668aa"
          },
          "dependencies": [
            "module.alb.aws_lb_target_group.frontend_tg",
            "module.ec2.aws_instance.ec2-publica-1",
            "module.ec2.aws_instance.ec2-publica-2",
            "module.ec2.aws_key_pair.generated_key",
            "module.net.aws_security_group.sg",
            "module.net.aws_subnet.public_subnet",
            "module.net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "spring_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:058264073116:targetgroup/optimiza-spring-tg/33f533b110657e18-20251204015710237600000008",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:058264073116:targetgroup/optimiza-spring-tg/33f533b110657e18",
            "target_id": "i-023df04316016e8de"
          },
          "dependencies": [
            "module.alb.aws_lb_target_group.spring_tg",
            "module.ec2.aws_instance.ec2-publica-1",
            "module.ec2.aws_instance.ec2-publica-2",
            "module.ec2.aws_key_pair.generated_key",
            "module.net.aws_security_group.sg",
            "module.net.aws_subnet.public_subnet",
            "module.net.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:058264073116:targetgroup/optimiza-spring-tg/33f533b110657e18-20251204015709935400000007",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:058264073116:targetgroup/optimiza-spring-tg/33f533b110657e18",
            "target_id": "i-0573973cc4fb668aa"
          },
          "dependencies": [
            "module.alb.aws_lb_target_group.spring_tg",
            "module.ec2.aws_instance.ec2-publica-1",
            "module.ec2.aws_instance.ec2-publica-2",
            "module.ec2.aws_key_pair.generated_key",
            "module.net.aws_security_group.sg",
            "module.net.aws_subnet.public_subnet",
            "module.net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264073116:security-group/sg-076a3fa3de81995e6",
            "description": "Allow HTTP and HTTPS from Internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-076a3fa3de81995e6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "optimiza-alb-sg",
            "name_prefix": "",
            "owner_id": "058264073116",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-007b6e528b6e82d6c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-privada",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e001c9271cf7f3b9",
            "arn": "arn:aws:ec2:us-east-1:058264073116:instance/i-01e95e5d6b2c09999",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01e95e5d6b2c09999",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "terraform_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0153e0a672dd955ab",
            "private_dns": "ip-10-0-0-148.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.148",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0be2105eeac1a16e4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07fc92e3825181da4",
            "tags": {
              "Name": "ec2-privada-optimiza"
            },
            "tags_all": {
              "Name": "ec2-privada-optimiza"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b6bc9d832e1bef9e"
            ]
          },
          "dependencies": [
            "module.ec2.aws_key_pair.generated_key",
            "module.net.aws_security_group.mysql_sg",
            "module.net.aws_subnet.private_subnet",
            "module.net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-publica-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e001c9271cf7f3b9",
            "arn": "arn:aws:ec2:us-east-1:058264073116:instance/i-023df04316016e8de",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-023df04316016e8de",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "terraform_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05676e3003516f081",
            "private_dns": "ip-10-0-0-28.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.28",
            "public_dns": "ec2-13-216-253-123.compute-1.amazonaws.com",
            "public_ip": "13.216.253.123",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a2df98d9f4add37b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f3f4871114f15e03",
            "tags": {
              "Name": "ec2-publica-optimiza-1"
            },
            "tags_all": {
              "Name": "ec2-publica-optimiza-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06e21bf399f66d903"
            ]
          },
          "dependencies": [
            "module.ec2.aws_key_pair.generated_key",
            "module.net.aws_security_group.sg",
            "module.net.aws_subnet.public_subnet",
            "module.net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-publica-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e001c9271cf7f3b9",
            "arn": "arn:aws:ec2:us-east-1:058264073116:instance/i-0573973cc4fb668aa",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0573973cc4fb668aa",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "terraform_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03008e0140d15a51c",
            "private_dns": "ip-10-0-0-95.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.95",
            "public_dns": "ec2-44-220-177-112.compute-1.amazonaws.com",
            "public_ip": "44.220.177.112",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f6275edb67957cb0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-046d8141914185c4f",
            "tags": {
              "Name": "ec2-publica-optimiza-2"
            },
            "tags_all": {
              "Name": "ec2-publica-optimiza-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06e21bf399f66d903"
            ]
          },
          "dependencies": [
            "module.ec2.aws_key_pair.generated_key",
            "module.net.aws_security_group.sg",
            "module.net.aws_subnet.public_subnet",
            "module.net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.net",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cc54b9ecc7bfb9c4",
            "association_id": "eipassoc-0d655713bccca20ce",
            "domain": "vpc",
            "id": "eipalloc-0cc54b9ecc7bfb9c4",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0aa3035b662ddd39e",
            "private_dns": "ip-10-0-0-23.ec2.internal",
            "private_ip": "10.0.0.23",
            "public_dns": "ec2-44-219-155-248.compute-1.amazonaws.com",
            "public_ip": "44.219.155.248",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat-eip-optimiza"
            },
            "tags_all": {
              "Name": "nat-eip-optimiza"
            },
            "vpc": true
          },
          "dependencies": [
            "module.net.aws_internet_gateway.igw",
            "module.net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.net",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264073116:internet-gateway/igw-0e02fcf624714e7d2",
            "id": "igw-0e02fcf624714e7d2",
            "owner_id": "058264073116",
            "tags": {
              "Name": "igw-optimiza"
            },
            "tags_all": {
              "Name": "igw-optimiza"
            },
            "vpc_id": "vpc-007b6e528b6e82d6c"
          },
          "dependencies": [
            "module.net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.net",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cc54b9ecc7bfb9c4",
            "association_id": "eipassoc-0d655713bccca20ce",
            "connectivity_type": "public",
            "id": "nat-015c8ee3f88cf8ef5",
            "network_interface_id": "eni-0aa3035b662ddd39e",
            "private_ip": "10.0.0.23",
            "public_ip": "44.219.155.248",
            "subnet_id": "subnet-0f3f4871114f15e03",
            "tags": {
              "Name": "nat-optimiza"
            },
            "tags_all": {
              "Name": "nat-optimiza"
            }
          },
          "dependencies": [
            "module.net.aws_eip.nat_eip",
            "module.net.aws_internet_gateway.igw",
            "module.net.aws_subnet.public_subnet",
            "module.net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.net",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "acl_privada",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264073116:network-acl/acl-0e59c8f929b936dc9",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0e59c8f929b936dc9",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "17",
                "rule_no": 310,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 300,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/24",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/24",
                "from_port": 3306,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 250,
                "to_port": 3306
              },
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/24",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 200,
                "to_port": 80
              }
            ],
            "owner_id": "058264073116",
            "subnet_ids": [
              "subnet-07fc92e3825181da4",
              "subnet-08bba7a917a260fcb"
            ],
            "tags": {
              "Name": "acl_privada_optimiza"
            },
            "tags_all": {
              "Name": "acl_privada_optimiza"
            },
            "vpc_id": "vpc-007b6e528b6e82d6c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.net.aws_subnet.private_subnet",
            "module.net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.net",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "acl_publica",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264073116:network-acl/acl-088610dca2a1456c5",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-088610dca2a1456c5",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": -1,
                "icmp_type": -1,
                "ipv6_cidr_block": "",
                "protocol": "1",
                "rule_no": 450,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "17",
                "rule_no": 410,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 400,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 300,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 200,
                "to_port": 80
              }
            ],
            "owner_id": "058264073116",
            "subnet_ids": [
              "subnet-046d8141914185c4f",
              "subnet-0f3f4871114f15e03"
            ],
            "tags": {
              "Name": "acl_publica_optimiza"
            },
            "tags_all": {
              "Name": "acl_publica_optimiza"
            },
            "vpc_id": "vpc-007b6e528b6e82d6c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.net.aws_subnet.public_subnet",
            "module.net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.net",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264073116:route-table/rtb-0e9bcfe370c9822b0",
            "id": "rtb-0e9bcfe370c9822b0",
            "owner_id": "058264073116",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-015c8ee3f88cf8ef5",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-private-optimiza"
            },
            "tags_all": {
              "Name": "rt-private-optimiza"
            },
            "timeouts": null,
            "vpc_id": "vpc-007b6e528b6e82d6c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.net.aws_eip.nat_eip",
            "module.net.aws_internet_gateway.igw",
            "module.net.aws_nat_gateway.nat",
            "module.net.aws_subnet.public_subnet",
            "module.net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.net",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264073116:route-table/rtb-00fb712a6f74a278c",
            "id": "rtb-00fb712a6f74a278c",
            "owner_id": "058264073116",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e02fcf624714e7d2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-public-optimiza"
            },
            "tags_all": {
              "Name": "rt-public-optimiza"
            },
            "timeouts": null,
            "vpc_id": "vpc-007b6e528b6e82d6c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.net.aws_internet_gateway.igw",
            "module.net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.net",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-066f207d1e0c5ce9e",
            "route_table_id": "rtb-0e9bcfe370c9822b0",
            "subnet_id": "subnet-07fc92e3825181da4"
          },
          "dependencies": [
            "module.net.aws_eip.nat_eip",
            "module.net.aws_internet_gateway.igw",
            "module.net.aws_nat_gateway.nat",
            "module.net.aws_route_table.private_rt",
            "module.net.aws_subnet.private_subnet",
            "module.net.aws_subnet.public_subnet",
            "module.net.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-005a75da8a1e40a0b",
            "route_table_id": "rtb-0e9bcfe370c9822b0",
            "subnet_id": "subnet-08bba7a917a260fcb"
          },
          "dependencies": [
            "module.net.aws_eip.nat_eip",
            "module.net.aws_internet_gateway.igw",
            "module.net.aws_nat_gateway.nat",
            "module.net.aws_route_table.private_rt",
            "module.net.aws_subnet.private_subnet",
            "module.net.aws_subnet.public_subnet",
            "module.net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.net",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-037c0fe517439b817",
            "route_table_id": "rtb-00fb712a6f74a278c",
            "subnet_id": "subnet-0f3f4871114f15e03"
          },
          "dependencies": [
            "module.net.aws_internet_gateway.igw",
            "module.net.aws_route_table.public_rt",
            "module.net.aws_subnet.public_subnet",
            "module.net.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09162997c0e339fe0",
            "route_table_id": "rtb-00fb712a6f74a278c",
            "subnet_id": "subnet-046d8141914185c4f"
          },
          "dependencies": [
            "module.net.aws_internet_gateway.igw",
            "module.net.aws_route_table.public_rt",
            "module.net.aws_subnet.public_subnet",
            "module.net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.net",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mysql_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264073116:security-group/sg-0b6bc9d832e1bef9e",
            "description": "SG para o Banco de Dados MySQL",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b6bc9d832e1bef9e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Permite Apps acessarem Banco",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06e21bf399f66d903"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "Permite SSH do Bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06e21bf399f66d903"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "mysql_security_group",
            "name_prefix": "",
            "owner_id": "058264073116",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "optimiza-mysql-sg"
            },
            "tags_all": {
              "Name": "optimiza-mysql-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-007b6e528b6e82d6c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.net",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264073116:security-group/sg-06e21bf399f66d903",
            "description": "SG para EC2s Publicas (Nginx/Bastion)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06e21bf399f66d903",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "basic_security",
            "name_prefix": "",
            "owner_id": "058264073116",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "optimiza-public-ec2-sg"
            },
            "tags_all": {
              "Name": "optimiza-public-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-007b6e528b6e82d6c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.net",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264073116:subnet/subnet-07fc92e3825181da4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.128/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07fc92e3825181da4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264073116",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sub-rede-privada-optimiza-1"
            },
            "tags_all": {
              "Name": "sub-rede-privada-optimiza-1"
            },
            "vpc_id": "vpc-007b6e528b6e82d6c"
          },
          "dependencies": [
            "module.net.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264073116:subnet/subnet-08bba7a917a260fcb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.192/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08bba7a917a260fcb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264073116",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sub-rede-privada-optimiza-2"
            },
            "tags_all": {
              "Name": "sub-rede-privada-optimiza-2"
            },
            "vpc_id": "vpc-007b6e528b6e82d6c"
          },
          "dependencies": [
            "module.net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.net",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264073116:subnet/subnet-0f3f4871114f15e03",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f3f4871114f15e03",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "058264073116",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sub-rede-publica-optimiza-1"
            },
            "tags_all": {
              "Name": "sub-rede-publica-optimiza-1"
            },
            "vpc_id": "vpc-007b6e528b6e82d6c"
          },
          "dependencies": [
            "module.net.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264073116:subnet/subnet-046d8141914185c4f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.64/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-046d8141914185c4f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "058264073116",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sub-rede-publica-optimiza-2"
            },
            "tags_all": {
              "Name": "sub-rede-publica-optimiza-2"
            },
            "vpc_id": "vpc-007b6e528b6e82d6c"
          },
          "dependencies": [
            "module.net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.net",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264073116:vpc/vpc-007b6e528b6e82d6c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-0f91101f1bc939385",
            "default_route_table_id": "rtb-0a66e1a8523a5382a",
            "default_security_group_id": "sg-080990c8f0c594ac3",
            "dhcp_options_id": "dopt-052fe988e7c25a558",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-007b6e528b6e82d6c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a66e1a8523a5382a",
            "owner_id": "058264073116",
            "tags": {
              "Name": "vpc-optimiza"
            },
            "tags_all": {
              "Name": "vpc-optimiza"
            }
          }
        }
      ]
    }
  ]
}